Update Authcontext